# vrm2sl

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  TEXTURE_MATERIAL_IMPROVEMENTS.md  env.d.ts  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json
.github/agents/: vrm2sl-reviewer.agent.md  vrm2sl-safe-implementer.agent.md  vrm2sl-structure-explorer.agent.md
.github/instructions/: tauri-vuetify-starter-structure.instructions.md
backend/: .gitignore  Cargo.toml  build-msvc.ps1  setup-vcpkg.ps1  setup-vcpkg.sh  tauri.conf.json
backend/capabilities/: default.json
backend/icons/: icon-emoji.icns  icon.icns
backend/src/: command.rs  convert.rs  error.rs  ipc.rs  lib.rs  logging.rs  main.rs  notify.rs  project.rs
backend/src/convert/: ReadMe.md  diagnostic.rs  geometry.rs  gltf_utils.rs  material.rs  mod.rs  skeleton.rs  skinning.rs  types.rs  validation.rs
docker/: Dockerfile.linux-arm64  Dockerfile.linux-x64
frontend/: .stylelintignore  README.md  env.d.ts  eslint.config.ts  index.html  package.json  vite.config.ts
frontend/public/animations/: LICENSE-CC-BY-3.0.txt
frontend/src/: App.vue  Meta.ts  main.ts
frontend/src/components/: AppBarMenuComponent.vue  LocaleSelector.vue  MainContent.vue  VrmPreview.vue
frontend/src/components/modals/: AboutDialog.vue  SettingsDialog.vue
frontend/src/composables/: useAvatarAnimation.ts  useBvhRetargeting.ts  useFileSystem.ts  useLogger.ts  useNotification.ts  useVrmGender.ts  useVrmPreviewScene.ts
frontend/src/interfaces/: ConversionReport.ts  ConvertOptions.ts  FaceSettings.ts  FingerSettings.ts  LipSyncSettings.ts  ProjectSettings.ts  TextureInfo.ts  UploadFeeEstimate.ts  ValidationIssue.ts  index.ts
frontend/src/locales/: en.yaml  fr.yaml  ja.yaml  ko.yaml  zhHans.yaml  zhHant.yaml
frontend/src/plugins/: i18n.ts  vuetify.ts
frontend/src/store/: ConfigStore.ts  GlobalStore.ts  index.ts
frontend/src/styles/: settings.scss
frontend/src/types/: TextureResizeMethod.ts  env.d.ts  index.ts
frontend/src/types/vrm2sl/: AnalysisReport.ts  BlinkSettings.ts  ConvertOptions.ts  EyeTrackingSettings.ts  ProjectSettings.ts  ValidationIssue.ts  ValidationSeverity.ts  index.ts
scripts/: build-linux-docker.ps1  build-linux-docker.sh  build-tauri-msi-safe.mjs
scripts/docker/: docker-build.sh
src/: convert.rs  correction.rs  lib.rs  main.rs  pipeline.rs  texture.rs
vrm/: INVESTIGATION_NOTES.md  analyze_axes.py  analyze_walk_bvh.py  bvh_retarget_analysis.py  check_all_ibm.py  check_bind_pose.py  check_bvh.py  check_coordinate.py  check_glb_bones.py  check_glb_hierarchy.py  check_ibm.py  check_merge.py  check_mesh_skin.py  check_mhead_ibm.py  check_scene.py  check_skin_data.py  check_skin_data2.py  check_skin_detail.py  check_vrm_face.py  check_vrm_legs.py  check_walk_bvh.py  compare_bone_axes.py  compare_ibm.py  compare_ibm_session.py  compare_vrm_ibm.py  create_rotation_variants.py  inspect2.py  inspect3.py  inspect4.py  inspect5.py  inspect_detailed.py  inspect_eye_vertex_positions.py  inspect_eyes.py  inspect_output.py  inspect_output_session.py  inspect_skin0_weights.py  inspect_vrm.py  investigate_crab_walk.py  sim_deform.py  test_bvh_retarget.mjs
