[package]
name = "vrm2sl-tauri"
version = "0.8.0"
default-run = "vrm2sl-tauri"
authors = ["Logue <logue@hotmail.co.jp>"]
edition = "2024"
rust-version = "1.93.1"
description = "VRM to Second Life converter desktop backend"
readme = "../README.md"
repository = "https://github.com/logue/vrm2sl"
homepage = "https://github.com/logue/vrm2sl"
license-file = "../LICENSE"
keywords = ["application", "desktop", "tauri", "vue"]
categories = ["gui"]

[lib]
name = "vrm2sl_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
anyhow = "1.0.102"
gltf = { version = "1.4.1", features = ["import", "names"] }
nalgebra = "0.34.1"
image = "0.25.9"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
jiff = { version = "0.2.21", features = ["serde"] }

tauri = { version = "2.10.2", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-log = "2.8.0"
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.3"
tauri-plugin-os = "2.3.2"

# macOS 固有の最適化
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
core-foundation = "0.10.1"
core-graphics = "0.25.0"
objc = "0.2.7"

# Apple Silicon (ARM64) 向けの設定
# [target.aarch64-apple-darwin]
# rustflags = ["-C", "target-cpu=apple-a14"] # Apple Silicon互換性向上
